# comicthumb-rs

./: Cargo.toml  LICENSE-MIT  README.md  comicthumb.thumbnailer  flake.nix  package.nix  shell.nix
src/: extractor.rs  main.rs  utils.rs
src/extractor/: bzip2_extractor.rs  extractor_type.rs  gzip_extractor.rs  rar_extractor.rs  tar_extractor.rs  zip_extractor.rs
