[package]
name = "comicthumb"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/T-Thurow/comicthumb-rs"
homepage = "https://github.com/T-Thurow/comicthumb-rs"
description = """
A reimplementation of the comicbook thumbnailer comicthumb written in Rust.
"""

[dependencies]
alphanumeric-sort = "1.5.3"
bzip2 = { version = "0.5.2", features = ["libbz2-rs-sys"] }
flate2 = { version = "1.1.0", features = ["zlib-rs"] }
image = { version = "0.25.6", default-features = false, features = ["rayon", "jpeg", "png", "gif", "tiff", "webp"] }
regex = "1.11.1"
tar = "0.4.44"
unrar = "0.5.8"
zip = { version = "2.6.1", default-features = false, features = ["deflate"] }
